--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +11,18 @@
     "@types/node": "^16.11.54",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "bootstrap": "^5.2.0",
+    "clsx": "^1.2.1",
+    "dayjs": "^1.11.5",
+    "jspdf": "^2.5.1",
+    "lunar-typescript": "^1.2.23",
+    "react": "~17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "~17.0.2",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-svg": "^15.1.7",
+    "sass": "^1.54.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
